--- a/swiggy-clone/src/app/app.component.html
+++ b/swiggy-clone/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<mat-drawer-container>
+    <mat-drawer mode="over" [(opened)]= "addressNavEnable">
+        <app-location></app-location>
+    </mat-drawer>
+    <app-main-header></app-main-header>
+    <router-outlet></router-outlet>
+</mat-drawer-container>
