--- a/swiggy-clone/src/app/pages/home/home.component.html
+++ b/swiggy-clone/src/app/pages/home/home.component.html
@@ -1,8 +1,1 @@
-<mat-drawer-container class="example-container">
-    <mat-drawer #drawer  mode="over">
-        <app-location (toggleEvent)="toggleDrawer()"></app-location>
-    </mat-drawer>
-    <mat-drawer-content>
-        <app-main-header (toggleEvent)="toggleDrawer()"></app-main-header>
-    </mat-drawer-content>
-</mat-drawer-container>
+<h1>Home</h1>
